# VarenPoseVAE

./: .gitignore  LICENSE  README.md  matrot.py  pyproject.toml  requirements.txt  sample_VAE.py  train_VAE.py
checkpoints/: VarenPoser.pth
example_scripts/: regularisation_example.py  sample_VAE.py  visualise_pose_space.py
src/datasets/: VAREN_dataset_reader.py  varen_pose_dataset.py
src/models/: VAE.py  varen_poser.py  vposer.py
src/utils/: example_utils.py  logger.py  rotation_tools.py
varen_poser/datasets/: varen_pose_dataset.py
varen_poser/models/: varen_poser.py
varen_poser/utils/: example_utils.py  rotation_tools.py
