[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varen_poser"
version = "1.0.0"
description = "VAE-Base pose prior for VAREN model."
authors = [{ name = "Dennis Perrett"}]
dependencies = [
    "pyglet<2.0",
    "torch",
    "tqdm",
    "trimesh",
    "varen",
]

[tool.setuptools.packages.find]
where = ["."]
